feat: Optimize features
- optimize shuffle passes count
- apply lod texture resizing
- height referencing (with geoid)
- remove old pointcloud conversion featrues
- optimize memory usage for i3dm convering